--- a/render.yaml
+++ b/render.yaml
@@ -5,4 +5,4 @@ services:
     region: oregon
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python webhook_server.py
+    startCommand: gunicorn webhook_server:app --bind 0.0.0.0:10000
